# mozilla-vpn-split-tunnel

./: CMakeLists.txt
loader/: Info.plist.in  VPNSplitTunnelLoader.entitlements  VPNSplitTunnelLoader.h  VPNSplitTunnelLoader.mm  main.mm
src/: MozillaVPNSplitTunnel.entitlements  VPNSplitTunnelProvider.mm  main.mm
